@@ -1,3 +1,7 @@
+2008-09-30  Brian Curry  <http://www.raiazome.com/Brian_Curry>
+
+	* modules/poetry.pl: New.
+
 2008-09-29  Brian Curry  <http://www.raiazome.com/Brian_Curry>
 
 	* modules/recaptcha.pl: New perldoc-style documentation.
